--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -4,3 +4,11 @@ html,body,
     margin: 0;
     padding: 0;
 }
+.el-breadcrumb{
+    margin-bottom: 15px;
+    font-size: 12px;
+}
+/* important覆盖原有样式 */
+.el-card{
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15) !important;
+}
